feat: 권한 및 요청 종류에 따른 api 접근 설정(#37)