@@ -7,6 +7,7 @@ import stanl_2.final_backend.domain.member.command.domain.aggregate.entity.Membe
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MemberDetails implements UserDetails {
 
@@ -22,10 +23,13 @@ public class MemberDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        List<SimpleGrantedAuthority> authorities = member.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority(role.getRole()))
-                .toList();
-        return authorities;
+//        List<SimpleGrantedAuthority> authorities = member.getRoles().stream()
+//                .map(role -> new SimpleGrantedAuthority(role.getRole()))
+//                .toList();
+//        return authorities;
+        return member.getRoles().stream()
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getRole()))
+                .collect(Collectors.toList());
     }
 
     @Override
